# test-scripts

./: Cargo.toml  README.md  run_all_tests.sh
change_tracking/: Cargo.toml  README.md
change_tracking/src/: main.rs
change_tracking/tests/sql/: setup.sql
merge-into/tests/sql/: setup.sql
multi-table-insert/: Cargo.toml
multi-table-insert/src/: main.rs
perf_copy_into/: Cargo.toml
perf_copy_into/src/: main.rs
replace-into/: README.md
replace-into/src/: main.rs
src/: main.rs
task/: merge.sql  set_up.sql  task.sql  task_txn_merge.sql  txn_merge.sql
task/src/: main.rs  util.rs
tests/sql/: setup.sql
the-suite/: Cargo.toml
the-suite/sql/change_tracking/: setup_clustered.sql
the-suite/sql/multi_table_insert/: multi_table_insert.sql  setup.sql  teardown.sql
the-suite/sql/vacuum2/: setup.sql
the-suite/src/: auto_vacuum.rs  change_tracking.rs  explict_txn.rs  main.rs  multi_table_insert.rs  util.rs  vacuum2.rs
txn/: Cargo.toml
txn/src/: main.rs  util.rs
vacuum/: Cargo.toml  README.md
vacuum/src/: main.rs
vacuum/tests/sql/: setup.sql
