[package]
name = "test_stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "test_stream"

[dependencies]
anyhow = "1.0.*"
clap = { version = "4.4.8", features = ["derive"] }
databend-driver = "0.11.0"
env_logger = "0.10.0"
log = "0.4.17"
futures-util = "0.3.28"
rand = "0.8.5"
tokio = { version = "1.28.1", features = ["full"] }
