[package]
name = "test-scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.*"
clap = {version = "4.5.23", features = ["derive"]}
databend-driver = "0.24.6"
env_logger = "0.11.5"
log = "0.4.22"
futures-util = "0.3.31"
tokio = { version = "1.42.0", features = ["full"] }
